@@ -64,7 +64,7 @@
         <developerConnection>scm:git:git@github.com:wizzdi/flexicore-boot-starter-data-jpa-hibernate.git
         </developerConnection>
         <url>https://github.com/wizzdi/flexicore-boot-starter-data-jpa-hibernate</url>
-        <tag>flexicore-boot-starter-data-jpa-hibernate-${version}</tag>
+        <tag>flexicore-boot-starter-data-jpa-hibernate-2.0.0</tag>
     </scm>
 
     <dependencyManagement>
@@ -182,6 +182,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/sun.reflect.annotation=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
 
             <plugin>
